@@ -36,6 +36,9 @@
   # if true, exports the CPU usage in ticks, together with the percentage values
   #cpu_ticks: false
 
+  # If false, cmdline of a process is not cached.
+  #process.cmdline.cache.enabled: true
+
   # Enable collection of cgroup metrics from processes on Linux.
   #process.cgroups.enabled: true
 
